Carousel: alignment fix

--- a/client/src/components/Home/Carousel/Carousel.css
+++ b/client/src/components/Home/Carousel/Carousel.css
@@ -5,7 +5,6 @@
 .slide {    
     margin: 0 auto;
     overflow: hidden;
-    /* max-width: 1600px; */
     position: relative;
 }
 
@@ -16,11 +15,13 @@
 
 .slide-item {
     display: inline-block;
+    vertical-align:middle;
     width: 100%;
 }
-.slide-item img {
-    max-width: 100%;
+.slide-item img {    
+    width: 100%;
 }
+
 
 .carousel-control {
     background-color: rgba(0, 0, 0, 0.3);
